--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -63,7 +63,8 @@
         If not, <a href="/bmi" target="_blank">find out here</a>
     </div>
 
-   <a id="start-btn" href="/predict-form" class="button" style="display:none;">Start Prediction</a>
+    <a id="start-btn" href="/predict-form" class="button">Start Prediction</a>
+
 </div>
 <script>
     window.onload = function() {
